# backend/src/main/java/io/geordi/metrics/application/RequestOutcomeMeasurement.java
@@ -1,0 +1,4 @@
+package io.geordi.metrics.application;
+
+public record RequestOutcomeMeasurement(Double requestCount, Double errorCount) {
+}
